--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MIS Dashboard</title>
+  <title>GESCO Fleet Dashboard</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-    <h1>MIS DASHBOARD</h1>
+    <h1>GESCO Fleet DASHBOARD</h1>
     <div class="header-right">
-      <p><strong>Last Refresh Date:</strong> 31/05/2025</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Scorpio_tankers_logo.svg/2560px-Scorpio_tankers_logo.svg.png" alt="Scorpio Logo" class="logo"/>
+      <p><strong>Last Refresh Date:</strong> 06/06/2025</p>
+      <img src="flag.png" alt="GESCO Logo" class="logo"/>
     </div>
   </header>
 
   <section class="filters">
     <label>TechManager
       <select>
-        <option>SMM</option>
+        <option>Tanker-Fleet</option>
       </select>
     </label>
     <label>Fleet
       <select>
-        <option>SCORPIO Fleet 3</option>
+        <option>Operation-1</option>
       </select>
     </label>
     <label>Ship
