--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>GESCO Fleet DASHBOARD</h1>
+    <h1 <img src="flag.png" alt="GESCO Logo" class="logo"/>>GESCO Fleet DASHBOARD</h1>
     <div class="header-right">
       <p><strong>Last Refresh Date:</strong> 06/06/2025</p>
-      <img src="flag.png" alt="GESCO Logo" class="logo"/>
     </div>
   </header>
 
