--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <header>
-    <h1 <img src="flag.png" alt="GESCO Logo" class="logo"/>>GESCO Fleet DASHBOARD</h1>
+    <h1>GESCO Fleet DASHBOARD</h1>
+    <img src="flag.png" alt="GESCO Logo" class="logo"/>
     <div class="header-right">
       <p><strong>Last Refresh Date:</strong> 06/06/2025</p>
     </div>
