--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <label>Ship
       <select>
         <option>Multiple selections</option>
+        <option>JAG Alok</option>
+        <option>JAG Priyanka</option>
       </select>
     </label>
   </section>
