--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="Indian Flag" class="flag"/>
+    <img src="flag.png" alt="GESCO Flag" class="flag"/>
     <h1>GESCO Fleet - Dashboard</h1>
     <div class="last-updated">Last Updated: 06/06/2025 14:00</div>
   </header>
